@@ -1,9 +1,13 @@
 package com.nhl.link.etl.runtime.jdbc;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Iterator;
+import java.util.List;
 
 import org.apache.cayenne.DataRow;
 import org.apache.cayenne.ResultIterator;
+import org.apache.cayenne.exp.parser.ASTDbPath;
 
 import com.nhl.link.etl.Row;
 import com.nhl.link.etl.RowAttribute;
@@ -24,6 +28,25 @@ public class JdbcRowReader implements RowReader {
 		final Iterator<DataRow> drIt = rows.iterator();
 
 		return new Iterator<Row>() {
+
+			// compiled dynamically unless explicitly set for RowReader...
+			private RowAttribute[] itAttributes;
+
+			{
+				itAttributes = attributes;
+			}
+
+			// if not set, compiles attributes dynamically from a DataRow and
+			// caches them in iterator
+			private RowAttribute[] attributes(DataRow row) {
+
+				if (itAttributes == null) {
+					itAttributes = attributesFromDataRow(row);
+				}
+
+				return itAttributes;
+			}
+
 			@Override
 			public boolean hasNext() {
 				return drIt.hasNext();
@@ -31,7 +54,10 @@ public class JdbcRowReader implements RowReader {
 
 			@Override
 			public Row next() {
-				return new DataRowRow(attributes, drIt.next());
+
+				DataRow row = drIt.next();
+				RowAttribute[] attributes = attributes(row);
+				return new DataRowRow(attributes, row);
 			}
 
 			@Override
@@ -39,6 +65,22 @@ public class JdbcRowReader implements RowReader {
 				throw new UnsupportedOperationException();
 			}
 		};
+	}
+
+	RowAttribute[] attributesFromDataRow(DataRow row) {
+
+		List<String> names = new ArrayList<>(row.keySet());
+
+		// ensure predictable order on each run...
+		Collections.sort(names);
+
+		RowAttribute[] attributes = new RowAttribute[row.size()];
+		for (int i = 0; i < attributes.length; i++) {
+			String name = names.get(i);
+			attributes[i] = new RowAttribute(Object.class, name, ASTDbPath.DB_PREFIX + name, i);
+		}
+
+		return attributes;
 	}
 
 	@Override
