@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
+<config>
+	<type>jdbc</type>
+	<connectorId>derbysrc</connectorId>
+	<properties>
+		<extractor.jdbc.sqltemplate>
+			<![CDATA[SELECT id, name, name FROM utest.etl5
+			]]>
+		</extractor.jdbc.sqltemplate>
+		<!-- This (or #result) is required as Derby metadata returns uppercase columns -->
+		<extractor.jdbc.sqltemplate.caps>lower</extractor.jdbc.sqltemplate.caps>
+	</properties>
+</config>
